--- a/platformio.ini
+++ b/platformio.ini
@@ -9,8 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32doit-devkit-v1]
-platform = espressif32
+platform = espressif32@1.1.2
 board = esp32doit-devkit-v1
 framework = arduino
+platform_packages =
+    platformio/framework-arduinoespressif32@1.6.0
 lib_deps =
-    AsyncMqttClient
+    AsyncMqttClient@0.8.2
+    AsyncTCP@1.0.0
